# airflow_dags

./: .mise.toml  pyproject.toml
airflow_dags/dags/: example_with_params.py
