[tool.poetry]
name = "airflow-dags"
version = "0.1.0"
description = ""
authors = ["Oliver Tosky <olivertosky@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
apache-airflow = "2.8.1"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
